test: add wallet migration test for v0.14.3 legacy wallets
Test migratewallet RPC on ancient wallet formats from v0.14.3:
- Non-HD wallet (FEATURE_COMPRPUBKEY, version 60000)
- HD single-chain wallet (VERSION_HD_BASE, version 130000)

Verifies balance, transactions, and address ownership are preserved
after migration to descriptor wallets.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -505,14 +505,16 @@ jobs:
         run: |
           py -3 -m pip install pyzmq
           py -3 test/functional/test_runner.py --jobs $NUMBER_OF_PROCESSORS --quiet --tmpdirprefix="$RUNNER_TEMP" --combinedlogslen=99999999 --timeout-factor=$TEST_RUNNER_TIMEOUT_FACTOR $TEST_RUNNER_EXTRA \
-            `# feature_unsupported_utxo_db.py fails on Windows because of emojis in the test data directory.` \
+            `# Tests using ancient releases fail on Windows due to lack of UTF-8 support.` \
             --exclude feature_unsupported_utxo_db.py \
+            --exclude wallet_ancient_migration.py \
             `# See https://github.com/bitcoin/bitcoin/issues/31409.` \
             --exclude wallet_multiwallet.py
-          # Run feature_unsupported_utxo_db sequentially in ASCII-only tmp dir,
-          # because it is excluded above due to lack of UTF-8 support in the
+          # Run ancient release tests sequentially in ASCII-only tmp dir,
+          # because they are excluded above due to lack of UTF-8 support in the
           # ancient release.
           py -3 test/functional/feature_unsupported_utxo_db.py --previous-releases --tmpdir="${RUNNER_TEMP}/test_feature_unsupported_utxo_db"
+          py -3 test/functional/wallet_ancient_migration.py --previous-releases --tmpdir="${RUNNER_TEMP}/test_wallet_ancient_migration"
 
   ci-matrix:
     name: ${{ matrix.name }}
