cmake: inline `install_binary_component` command

--- a/src/qt/test/CMakeLists.txt
+++ b/src/qt/test/CMakeLists.txt
@@ -45,4 +45,8 @@ if(WIN32 AND VCPKG_TARGET_TRIPLET)
   )
 endif()
 
-install_binary_component(test_bitcoin-qt INTERNAL)
+install(TARGETS test_bitcoin-qt
+  RUNTIME
+    DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}
+    COMPONENT test_bitcoin_qt
+)
