--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -221,4 +221,8 @@ endfunction()
 
 add_all_test_targets()
 
-install_binary_component(test_bitcoin INTERNAL)
+install(TARGETS test_bitcoin
+  RUNTIME
+    DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}
+    COMPONENT test_bitcoin
+)
