--- a/src/bench/CMakeLists.txt
+++ b/src/bench/CMakeLists.txt
@@ -86,4 +86,8 @@ add_test(NAME bench_sanity_check
   COMMAND bench_bitcoin -sanity-check
 )
 
-install_binary_component(bench_bitcoin INTERNAL)
+install(TARGETS bench_bitcoin
+  RUNTIME
+    DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}
+    COMPONENT bench_bitcoin
+)
