Squashed 'src/dashbls/' changes from 0bb5c5b032..dd683653c6
dd683653c6 Merge pull request #115 from kwvg/bump_1.3.6
f5dc3d0a87  chore: bump version to 1.3.6
3a2208ecc3 Merge pull request #114 from kwvg/bye_ssp
6e0a611212 build: remove explicit libssp linking from Windows build
d5e656f707 chore: update cmake (#113)
02fc11abfd ci: use ubuntu-latest instead of 20.04 as actions is EOLing 20.04 (#109)

git-subtree-dir: src/dashbls
git-subtree-split: dd683653c6eaba7235bc9c600f46bafbb8210291

--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ macos-latest, ubuntu-20.04 ]
+        os: [ macos-latest, ubuntu-latest ]
         builder: [ cmake, autotools ]
         compiler:
           - cc: gcc
