crypto: Add secp256k1-based DHKEM for HPKE (Hybrid Public Key Encryption)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -109,6 +109,7 @@ add_library(bitcoin_common STATIC EXCLUDE_FROM_ALL
   core_read.cpp
   core_write.cpp
   deploymentinfo.cpp
+  dhkem_secp256k1.cpp
   external_signer.cpp
   init/common.cpp
   kernel/chainparams.cpp
