wallet: move scanning logic to wallet/scan.cpp
Move rescan logic to new class to prepare for more code that
will be added for parallel rescan in the future commits.

CWallet::ScanForWalletTransactions impl is moved to scan.cpp
to prevent circular dependency of the form
"wallet/wallet -> wallet/scan -> wallet/wallet".

--- a/src/wallet/CMakeLists.txt
+++ b/src/wallet/CMakeLists.txt
@@ -26,6 +26,7 @@ add_library(bitcoin_wallet STATIC EXCLUDE_FROM_ALL
   rpc/transactions.cpp
   rpc/util.cpp
   rpc/wallet.cpp
+  scan.cpp
   scriptpubkeyman.cpp
   spend.cpp
   sqlite.cpp
