cmake: Switch to `minisketch` upstream build system

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,12 +17,13 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 # not overridden.
 include(../cmake/crc32c.cmake)
 include(../cmake/leveldb.cmake)
-include(../cmake/minisketch.cmake)
 add_subdirectory(univalue)
 if (ENABLE_IPC AND NOT WITH_EXTERNAL_LIBMULTIPROCESS)
   include(../cmake/libmultiprocess.cmake)
   add_libmultiprocess(ipc/libmultiprocess)
 endif()
+include(../cmake/minisketch.cmake)
+add_minisketch(minisketch)
 include(../cmake/secp256k1.cmake)
 add_secp256k1(secp256k1)
 
