test: add targeted asmap unit tests

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(test_bitcoin
   amount_tests.cpp
   argsman_tests.cpp
   arith_uint256_tests.cpp
+  asmap_tests.cpp
   banman_tests.cpp
   base32_tests.cpp
   base58_tests.cpp
