test: swiftsync: Add aggregate test
Introduce a trivial example of creating and spending outpoints in
arbitrary order.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -101,6 +101,7 @@ add_executable(test_bitcoin
   sock_tests.cpp
   span_tests.cpp
   streams_tests.cpp
+  swiftsync_tests.cpp
   sync_tests.cpp
   system_ram_tests.cpp
   system_tests.cpp
