fees: add FeeRateEstimatorManager class
- Introduce FeeRateEstimatorManager, a module for managing
  multiple fee rate estimators. This manager allows registration
  of multiple FeeRateEstimator instances, enabling having more fee rate
  estimation strategies to be used in the bitcoin core node and wallet.

Co-authored-by: willcl-ark <will@256k1.dev>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -240,6 +240,7 @@ add_library(bitcoin_node STATIC EXCLUDE_FROM_ALL
   policy/ephemeral_policy.cpp
   policy/fees/block_policy_estimator.cpp
   policy/fees/block_policy_estimator_args.cpp
+  policy/fees/estimator_man.cpp
   policy/packages.cpp
   policy/rbf.cpp
   policy/settings.cpp
