fees: add `CalculatePercentiles` function
- Given a vector of chunk feerates in the order they were added
  to the block, CalculatePercentiles function will return the 25th,
  50th, 75th and 95th percentile feerates.

- This commit also add a unit test for the CalculatePercentile function.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -44,6 +44,7 @@ add_executable(test_bitcoin
   disconnected_transactions.cpp
   feefrac_tests.cpp
   feerounder_tests.cpp
+  fees_util_tests.cpp
   flatfile_tests.cpp
   fs_tests.cpp
   getarg_tests.cpp
