--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(bitcoin_util STATIC EXCLUDE_FROM_ALL
   exec.cpp
   exception.cpp
   feefrac.cpp
+  fees.cpp
   fs.cpp
   fs_helpers.cpp
   hasher.cpp
