--- a/cmake/bitcoin-build-config.h.in
+++ b/cmake/bitcoin-build-config.h.in
@@ -2,6 +2,8 @@
 // Distributed under the MIT software license, see the accompanying
 // file COPYING or https://opensource.org/license/mit/.
 
+// IWYU pragma: always_keep
+
 #ifndef BITCOIN_CONFIG_H
 #define BITCOIN_CONFIG_H
 
