--- a/depends/toolchain.cmake.in
+++ b/depends/toolchain.cmake.in
@@ -4,12 +4,45 @@
 
 # This file is expected to be highly volatile and may still change substantially.
 
+if("@host_system_name@" STREQUAL "Android")
+  # For Android, we use the toolchain file provided by the Android SDK.
+  # See: https://developer.android.com/ndk/guides/cmake
+  set(ANDROID_ABI @android_abi@)
+  set(ANDROID_PLATFORM android-@host_system_version@)
+  include(@android_ndk@/build/cmake/android.toolchain.cmake)
+
+  # Qt for Android support (provided by depends)
+  set(Qt6_ROOT "${CMAKE_CURRENT_LIST_DIR}" CACHE PATH "Root of Qt 6 installation" FORCE)
+  set(Qt6_DIR  "${CMAKE_CURRENT_LIST_DIR}/lib/cmake/Qt6" CACHE PATH "Path to Qt6Config.cmake" FORCE)
+  set(QT_HOST_PATH "${CMAKE_CURRENT_LIST_DIR}/native" CACHE PATH "Host Qt installation" FORCE)
+
+  set(ANDROID_SDK_ROOT "@android_sdk@" CACHE PATH "Path to the Android SDK" FORCE)
+  set(ANDROID_NDK_ROOT "@android_ndk@" CACHE PATH "Path to the Android NDK" FORCE)
+  set(WITH_DBUS OFF CACHE BOOL "Disable DBus for Android" FORCE)
+
+  # Qt's Java sources for Android Application Package (APK).
+  cmake_path(SET ANDROID_APK_SRC "${CMAKE_CURRENT_LIST_DIR}/src/android/java")
+  # The libc++_shared.so shared library, provided by the Android SDK,
+  # is required to build an Android Application Package (APK).
+  cmake_path(SET ANDROID_SHARED_CXX_LIB NORMALIZE "@android_toolchain_bin_dir@/../sysroot/usr/lib/@android_libcxx_shared_dir@/libc++_shared.so")
+  # Qt recommends using the same Gradle version that it comes with.
+  cmake_path(SET GRADLEW_EXECUTABLE "${CMAKE_CURRENT_LIST_DIR}/src/3rdparty/gradle/gradlew")
+
+  # Default to Ninja generator if available.
+  if(NOT DEFINED CMAKE_GENERATOR)
+    execute_process(COMMAND which ninja RESULT_VARIABLE _NINJA_FOUND OUTPUT_QUIET)
+    if(_NINJA_FOUND EQUAL 0)
+      set(CMAKE_GENERATOR "Ninja" CACHE INTERNAL "Default generator for Android builds")
+    endif()
+  endif()
+endif()
+
 # If CMAKE_SYSTEM_NAME is set within a toolchain file, CMake will also
 # set CMAKE_CROSSCOMPILING to TRUE, even if CMAKE_SYSTEM_NAME matches
 # CMAKE_HOST_SYSTEM_NAME. To avoid potential misconfiguration of CMake,
 # it is best not to touch CMAKE_SYSTEM_NAME unless cross-compiling is
 # intended.
-if(@depends_crosscompiling@)
+if(@depends_crosscompiling@ AND NOT "@host_system_name@" STREQUAL "Android")
   set(CMAKE_SYSTEM_NAME @host_system_name@)
   set(CMAKE_SYSTEM_VERSION @host_system_version@)
   set(CMAKE_SYSTEM_PROCESSOR @host_arch@)
@@ -75,11 +108,13 @@ if(NOT DEFINED CMAKE_SHARED_LINKER_FLAGS_DEBUG_INIT)
   set(CMAKE_SHARED_LINKER_FLAGS_DEBUG_INIT "@LDFLAGS_DEBUG@")
 endif()
 
-set(CMAKE_AR "@AR@")
-set(CMAKE_RANLIB "@RANLIB@")
-set(CMAKE_STRIP "@STRIP@")
-set(CMAKE_OBJCOPY "@OBJCOPY@")
-set(CMAKE_OBJDUMP "@OBJDUMP@")
+if(NOT "@host_system_name@" STREQUAL "Android")
+  set(CMAKE_AR "@AR@")
+  set(CMAKE_RANLIB "@RANLIB@")
+  set(CMAKE_STRIP "@STRIP@")
+  set(CMAKE_OBJCOPY "@OBJCOPY@")
+  set(CMAKE_OBJDUMP "@OBJDUMP@")
+endif()
 
 # Using our own built dependencies should not be
 # affected by a potentially random environment.
