coins: don't mutate main cache when connecting block
Introduce CoinsViewCacheAsync, a CCoinsViewCache subclass that reads coins
without mutating the underlying cache.

Override GetCoinFromBase() to call PeekCoin() instead of GetCoin(). This
prevents the main cache from caching inputs pulled from disk for a block that
has not yet been fully validated. Once Flush() is called on the async cache,
these inputs will be added as spent to cacheCoins in the main cache via
BatchWrite().

Rename CoinsViewCacheController to CoinsViewCacheAsyncController and change
it to wrap CoinsViewCacheAsync internally. Update m_connect_block_controller
to use the new async controller.

This is the foundation for async input fetching, where worker threads must not
mutate shared state.

Co-authored-by: l0rinc <pap.lorinc@gmail.com>

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -31,6 +31,7 @@ add_executable(test_bitcoin
   checkqueue_tests.cpp
   cluster_linearize_tests.cpp
   coins_tests.cpp
+  coinsviewcacheasync_tests.cpp
   coinscachepair_tests.cpp
   coinstatsindex_tests.cpp
   common_url_tests.cpp
@@ -186,15 +187,16 @@ function(add_boost_test source_file)
   list(TRANSFORM test_suite_macro
     REPLACE "(BOOST_FIXTURE_TEST_SUITE|BOOST_AUTO_TEST_SUITE)\\(" ""
   )
+
   foreach(test_suite_name IN LISTS test_suite_macro)
     add_test(NAME ${test_suite_name}
       COMMAND test_bitcoin --run_test=${test_suite_name} --catch_system_error=no --log_level=test_suite -- DEBUG_LOG_OUT
     )
     set_property(TEST ${test_suite_name} PROPERTY
       SKIP_REGULAR_EXPRESSION
-        "no test cases matching filter"
-        "skipping script_assets_test"
-        "skipping total_ram"
+      "no test cases matching filter"
+      "skipping script_assets_test"
+      "skipping total_ram"
     )
   endforeach()
 endfunction()
@@ -202,11 +204,14 @@ endfunction()
 function(add_all_test_targets)
   get_target_property(test_source_dir test_bitcoin SOURCE_DIR)
   get_target_property(test_sources test_bitcoin SOURCES)
+
   foreach(test_source ${test_sources})
     cmake_path(IS_RELATIVE test_source result)
+
     if(result)
       cmake_path(APPEND test_source_dir ${test_source} OUTPUT_VARIABLE test_source)
     endif()
+
     add_boost_test(${test_source})
   endforeach()
 endfunction()
