--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,18 +42,23 @@ jobs:
         # required, because check re-runs discard the annotations of other
         # tasks in the test suite.
         run: |
-          if [ "${{ github.event_name }}" = "pull_request" ]; then
-            echo "::notice title=debug_pull_request_number_str::${{ github.event.number }}"
+          if [ "${GITHUB_EVENT_NAME}" = "pull_request" ]; then
+            echo "::notice title=debug_pull_request_number_str::${PR_NUMBER}"
           fi
+        env:
+          GITHUB_EVENT_NAME: ${{ github.event_name }}
+          PR_NUMBER: ${{ github.event.number }}
       - id: runners
         run: |
-          if [[ "${REPO_USE_CIRRUS_RUNNERS}" == "${{ github.repository }}" ]]; then
+          if [[ "${REPO_USE_CIRRUS_RUNNERS}" == "${GITHUB_REPOSITORY}" ]]; then
             echo "provider=cirrus" >> "$GITHUB_OUTPUT"
             echo "::notice title=Runner Selection::Using Cirrus Runners"
           else
             echo "provider=gha" >> "$GITHUB_OUTPUT"
             echo "::notice title=Runner Selection::Using GitHub-hosted runners"
           fi
+        env:
+          GITHUB_REPOSITORY: ${{ github.repository }}
 
   test-each-commit:
     name: 'test max 6 ancestor commits'
@@ -64,7 +69,9 @@ jobs:
       MAX_COUNT: 6  # Keep in sync with name above
     steps:
       - name: Determine fetch depth
-        run: echo "FETCH_DEPTH=$((${{ github.event.pull_request.commits }} + 2))" >> "$GITHUB_ENV"
+        run: echo "FETCH_DEPTH=$((${PR_COMMITS} + 2))" >> "$GITHUB_ENV"
+        env:
+          PR_COMMITS: ${{ github.event.pull_request.commits }}
       - *ANNOTATION_PR_NUMBER
       - uses: actions/checkout@v6
         with:
@@ -100,9 +107,11 @@ jobs:
           fi
           echo "TEST_BASE=$(git rev-list -n$((${{ env.MAX_COUNT }} + 1)) --reverse HEAD $EXCLUDE_MERGE_BASE_ANCESTORS | head -1)" >> "$GITHUB_ENV"
       - run: |
-          git fetch origin "${GITHUB_BASE_REF}"
+          git fetch origin "${BASE_REF}"
           git config user.email "ci@example.com"
           git config user.name "CI"
+        env:
+          BASE_REF: ${{ github.base_ref }}
       - run: |
           sudo apt-get update
           sudo apt-get install clang mold ccache build-essential cmake ninja-build pkgconf python3-zmq libevent-dev libboost-dev libsqlite3-dev systemtap-sdt-dev libzmq3-dev qt6-base-dev qt6-tools-dev qt6-l10n-tools libqrencode-dev capnproto libcapnp-dev -y
@@ -110,7 +119,9 @@ jobs:
       - name: Compile and run tests
         run: |
           # Run tests on commits after the last merge commit and before the PR head commit
-          git rebase --exec "git merge --no-commit origin/${GITHUB_BASE_REF} && python3 ./.github/ci-test-each-commit-exec.py && git reset --hard" ${{ env.TEST_BASE }}
+          git rebase --exec "git merge --no-commit origin/${BASE_REF} && python3 ./.github/ci-test-each-commit-exec.py && git reset --hard" ${{ env.TEST_BASE }}
+        env:
+          BASE_REF: ${{ github.base_ref }}
 
   macos-native-arm64:
     name: ${{ matrix.job-name }}
@@ -672,7 +683,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v6
         with:
-          ref: *CHECKOUT_REF_TMPL
+          ref: ${{ github.event_name == 'pull_request' && github.ref || '' }}
           fetch-depth: 0
 
       - name: Configure Docker
