test: Remove `system_tests/run_command` runtime dependencies

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -61,6 +61,7 @@ add_executable(test_bitcoin
   miniminer_tests.cpp
   miniscript_tests.cpp
   minisketch_tests.cpp
+  mock_process.cpp
   multisig_tests.cpp
   net_peer_connection_tests.cpp
   net_peer_eviction_tests.cpp
@@ -185,6 +186,8 @@ function(add_boost_test source_file)
   list(TRANSFORM test_suite_macro
     REPLACE "(BOOST_FIXTURE_TEST_SUITE|BOOST_AUTO_TEST_SUITE)\\(" ""
   )
+  # The mock_process test suite does not contain unit tests.
+  list(REMOVE_ITEM test_suite_macro "mock_process")
   foreach(test_suite_name IN LISTS test_suite_macro)
     add_test(NAME ${test_suite_name}
       COMMAND test_bitcoin --run_test=${test_suite_name} --catch_system_error=no --log_level=test_suite -- DEBUG_LOG_OUT
